redis-sample/policies/instance-id-constraints.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: redisinstanceidconstraint
spec:
  crd:
    spec:
      names:
        kind: RedisInstanceIdConstraint
      validation:
        openAPIV3Schema: {}
  targets:
  - rego: |
      package redisinstanceidconstraints

      violation[{"msg": msg, "details": {"provided_name": provided}}] {
        provided := input.review.object.spec.displayName
        not re_match("^[a-z]", provided)
        msg := "Invalid displayName. ID must start with a letter."
      }

      violation[{"msg": msg, "details": {"provided_name": provided}}] {
        provided := input.review.object.spec.displayName
        not re_match("-$", provided)
        msg := "Invalid displayName. ID must not end with a hyphen."
      }

      violation[{"msg": msg, "details": {"provided_name": provided}}] {
        provided := input.review.object.spec.displayName
        re_match("[^a-z0-9-]", provided)
        msg := "Invalid displayName. ID must only contain lowercase letters, numbers, and hyphens."
      }

      violation[{"msg": msg, "details": {"provided_name": provided}}] {
        provided := input.review.object.spec.displayName
        count(provided) < 1
        msg := "Invalid displayName. Length of string must be greater than 1 character."
      }

      violation[{"msg": msg, "details": {"provided_name": provided}}] {
        provided := input.review.object.spec.displayName
        count(provided) > 40
        msg := "Invalid displayName. Length of string must be less than 40 characters"
      }
    target: admission.k8s.gatekeeper.sh
status: {}
